--- a/src/components/HomePageComponents/HeaderHome/HeaderHome.scss
+++ b/src/components/HomePageComponents/HeaderHome/HeaderHome.scss
@@ -37,4 +37,10 @@
   &__buttons {
     gap: 2rem;
   }
+
+  Button {
+    font-size: 14px;
+  }
+
 }
+
