--- a/src/components/HomePageComponents/Home/Home.scss
+++ b/src/components/HomePageComponents/Home/Home.scss
@@ -7,7 +7,6 @@
   padding-bottom: 4rem;
 
   background: linear-gradient(to bottom, $colourTen 40%, $colourEleven);
-  height: 80vh;
 
   &__title {
     padding-top: 2rem;
