--- a/src/components/HomePageComponents/Section/Section.scss
+++ b/src/components/HomePageComponents/Section/Section.scss
@@ -6,7 +6,7 @@
 }
 
 .white {
-  color: $colourFour;
+  color: $colourSix;
   background: linear-gradient(150deg, #fcfcfc 50%, $colourOne 50%);
 }
 .extraPadding {
